# EyeTrainer

./: .gitignore  .gitmodules  README.md  eye_trainer2.files  main.py  pyproject.toml  run.bat  run.sh  test_db.py  test_training.py  test_validation.py
data/: session_20260324_142752.json  session_20260324_143035.json  session_20260324_143119.json  session_20260324_143141.json  session_20260324_143203.json  session_20260324_143637.json  session_20260324_143747.json  session_20260324_143931.json  session_20260324_143956.json  session_20260324_144111.json  session_20260324_144145.json  session_20260324_153017.json  session_20260324_153126.json  session_20260324_153154.json  session_20260325_181404.json  session_20260325_181409.json  session_20260325_182014.json  session_20260325_182024.json  session_20260325_182037.json  session_20260325_182042.json  session_20260325_182157.json  session_20260404_191826.json  session_20260404_192031.json  session_20260404_192613.json  session_20260404_194758.json  session_20260405_222947.json  session_20260405_223124.json  session_20260405_224034.json  session_20260405_232230.json  session_20260414_164030.json  session_20260414_165250.json  session_20260414_165255.json  session_20260414_165637.json  session_20260414_165645.json  session_20260414_172045.json  session_20260414_172144.json  session_20260414_172534.json  session_20260414_173804.json  session_20260414_180821.json  session_20260414_181317.json  (+112 more)
python_gaze/: gaze_tracker.py
python_renderer/: renderer.py  sharedMemoryFileWriter.py
repositories/: exercise_repository.py  (+2 more)
(+68 files in other folders)
